# registry

./: CS.json  README.md  registry.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/scripts/: aggregate_signals.py  merge_all.py  validate.rs
.github/workflows/: aggregate_signals.yml  upload_ipfs.yml
CS/: 1000SATS-USD.yaml  1INCH-USD.yaml  AAVE-USD.yaml  ABT-USD.yaml  ADA-USD.yaml  AERO-USD.yaml  AEVO-USD.yaml  AIOZ-USD.yaml  AKT-USD.yaml  ALGO-USD.yaml  ALT-USD.yaml  AMP-USD.yaml  ANKR-USD.yaml  ANT-USD.yaml  APE-USD.yaml  APT-USD.yaml  AR-USD.yaml  ARB-USD.yaml  ARKM-USD.yaml  ASTR-USD.yaml  ATH-USD.yaml  ATOM-USD.yaml  AUDIO-USD.yaml  AVAX-USD.yaml  AXL-USD.yaml  AXS-USD.yaml  BAND-USD.yaml  BAT-USD.yaml  BCH-USD.yaml  BDX-USD.yaml  BEAM-USD.yaml  BGB-USD.yaml  BICO-USD.yaml  BLAST-USD.yaml  BLUR-USD.yaml  BNB-USD.yaml  BNX-USD.yaml  BOME-USD.yaml  BONK-USD.yaml  BRETT-USD.yaml  (+210 more)
registry/: registry.json
registry_validator/: Cargo.toml
registry_validator/src/: main.rs
schema/: prefix.schema.yaml  signal.schema.yaml
scripts/: merge_all.py
signals/: CS.yaml  FS.yaml
signals/CS/: 0G-USD.yaml  1000SATS-USD.yaml  1INCH-USD.yaml  2Z-USD.yaml  A-USD.yaml  AAVE-USD.yaml  AB-USD.yaml  ABT-USD.yaml  ACH-USD.yaml  ADA-USD.yaml  AERO-USD.yaml  AEVO-USD.yaml  AI16Z-USD.yaml  AIOZ-USD.yaml  AIXBT-USD.yaml  AKT-USD.yaml  ALEO-USD.yaml  ALGO-USD.yaml  ALPHA-USD.yaml  ALT-USD.yaml  AMP-USD.yaml  ANIME-USD.yaml  ANKR-USD.yaml  ANT-USD.yaml  APE-USD.yaml  APEX-USD.yaml  APT-USD.yaml  AR-USD.yaml  ARB-USD.yaml  ARC-USD.yaml  ARKM-USD.yaml  ASTER-USD.yaml  ASTR-USD.yaml  (+338 more)
(+23 files in other folders)
