[package]
name = "validate_registry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
serde_json = "1.0.116"
bothan-core = { path = "/Users/ongart/Development/band/bothan/bothan-core" }
clap = { version = "4.5.16", features = ["derive"] }
